IVY-1573 do not skip versions with URL encoded characters